Update .gitignore to ignore build/rls directory

--- a/test/feat.html
+++ b/test/feat.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="jasmine/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../build/hilo.js"></script>
+  <script type="text/javascript" src="../build/hilo-dev.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/feat.spec.js"></script>
