--- a/test/dom.html
+++ b/test/dom.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="jasmine/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../build/hilo.js"></script>
+  <script type="text/javascript" src="../build/hilo-dev.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/dom.spec.js"></script>
