Added AJAX Features

--- a/test/raw.html
+++ b/test/raw.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>hilo play</title>
-  <script type="text/javascript" src="../src/hilo.js"></script>
+  <script type="text/javascript" src="../build/hilo-dev.js"></script>
   <script type="text/javascript">
   var on = function () {
     $('div p').html('Lorem Ipsum');
