--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
       </section>
       <section id="about">
         <h2>About Hilo</h2>
-        <p>Hilo is developed by <a href="http://erikroyall">Erik Royall</a>.</p>
+        <p>Hilo is developed by <a href="http://erikroyall.github.com" target="_blank">Erik Royall</a>.</p>
       </section>
     </div>
     <footer id="main-footer" class="cf">
