Change 'Download' to 'Source Code'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#features" class="nav-item"><li>Features</li></a>
         <a href="#usage" class="nav-item"><li>Usage</li></a>
         <a href="#about" class="nav-item"><li>About</li></a>
-        <a href="http://github.com/erikroyall/hilo" target="_blank" class="nav-item"><li>Download</li></a>
+        <a href="http://github.com/erikroyall/hilo" target="_blank" class="nav-item"><li>Source Code</li></a>
       </ul>
     </nav>
     <header class="main-header">
@@ -90,7 +90,7 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
       </section>
       <section class="about">
         <h2>About Hilo</h2>
-        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" target="_blank">Erik Royall</a>, a 14 year old Web Developer. </p>
+        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" target="_blank">Erik Royall</a>, a 14 year old Web Developer.</p>
       </section>
     </div>
     <footer class="main-footer" class="cf">
