--- a/api_docs/files/src_test_main.js.html
+++ b/api_docs/files/src_test_main.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>src\dom\misc.js - hilo</title>
+    <title>src\test\main.js - hilo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="main-header">
-  <h1 class="site-logo"><a href="../index.html">hilo: src\dom\misc.js</a></h1>
+  <h1 class="site-logo"><a href="../index.html">hilo: src\test\main.js</a></h1>
   
   <p>API Docs for: 0.1.0-pre-dev-beta-9</p>
 </div>
@@ -72,35 +72,61 @@
 
   </div>
   <div class="main">
-    <div class="content"><h4>src\dom\misc.js</h4>
+    <div class="content"><h4>src\test\main.js</h4>
 
 <pre class="code prettyprint linenums">
   
   // --------------------------------------------------
-  // DOM Extensions
+  // Testing
   // --------------------------------------------------
 
+  extend(hilo, {
+
+    /**
+     * Public test function
+     *
+     * @for hilo
+     * @method test
+     * @param con
+     * @return {Test}
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * $.test(&quot;hello&quot;);
+     * $.test({
+     *   name: &quot;Erik Royall&quot;,
+     *   age: 14,
+     *   projects: [&quot;hilo&quot;, &quot;helio&quot;]
+     * });
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
+    test: function (con) {
+      return new Test(con);
+    }
+  });
+
   /**
-   * Get a NodeList of selected elements
-   * 
-   * @for Dom
-   * @method get
-   * @return {Dom}
+   * Main Test Class
+   *
+   * @constructor
+   * @class Test
+   * @param {Any} con To compare
+   * @param {boolean} neg Whether to inverse the result
+   * @return void
    * @example
    * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
-   * $(&quot;script&quot;).get();
+   * new Test({});
+   * new Test(&quot;Hilo&quot;, true);
    * &lt;/pre&gt;&lt;/div&gt;
    * @since 0.1.0
    */
-  Dom.prototype.get = function () {
-    var els = [];
-
-    this.each(function (el) {
-      els.push(el);
-    });
-
-    return els;
-  };
+  function Test (con, neg) {
+    this.con = con;
+    
+    if (neg) {
+      this.neg = true;
+    }
+  }
 </pre>
 
 </div>
