--- a/api_docs/classes/Dom.html
+++ b/api_docs/classes/Dom.html
@@ -891,7 +891,7 @@ $("div").filter(function (el) {
     
         <h5>Example</h5>
         <div class="code"><pre class="prettyprint">
-$("p.hidden").first().show();
+$("p.hidden").firstEl().show();
 </pre></div>
     
 </div>
