--- a/api_docs/files/src_dom_css.js.html
+++ b/api_docs/files/src_dom_css.js.html
@@ -91,41 +91,41 @@
   function unitize (unit, prop) {
     var pixel = {
       &quot;width&quot;: true,
-      &quot;max-width&quot;: true,
-      &quot;min-width&quot;: true,
+      &quot;maxWidth&quot;: true,
+      &quot;minWidth&quot;: true,
 
       &quot;height&quot;: true,
-      &quot;max-height&quot;: true,
-      &quot;min-height&quot;: true,
+      &quot;maxHeight&quot;: true,
+      &quot;minHeight&quot;: true,
 
-      &quot;border-width&quot;: true,
-      &quot;border-top-width&quot;: true,
-      &quot;border-left-width&quot;: true,
-      &quot;border-bottom-width&quot;: true,
-      &quot;border-right-width&quot;: true,
-      &quot;border-radius&quot;: true,
+      &quot;borderWidth&quot;: true,
+      &quot;borderTopWidth&quot;: true,
+      &quot;borderLeftWidth&quot;: true,
+      &quot;borderBottomWidth&quot;: true,
+      &quot;borderRightWidth&quot;: true,
+      &quot;borderRadius&quot;: true,
 
-      &quot;outline-width&quot;: true,
-      &quot;outline-offset&quot;: true,
-      &quot;stroke-width&quot;: true,
+      &quot;outlineWidth&quot;: true,
+      &quot;outlineOffset&quot;: true,
+      &quot;strokeWidth&quot;: true,
 
-      &quot;font-size&quot;: true,
-      &quot;line-height&quot;: true,
-      &quot;letter-spacing&quot;: true,
-      &quot;text-indent&quot;: true,
-      &quot;text-underline-width&quot;: true,
+      &quot;fontSize&quot;: true,
+      &quot;lineHeight&quot;: true,
+      &quot;letterSpacing&quot;: true,
+      &quot;textIndent&quot;: true,
+      &quot;textUnderlineWidth&quot;: true,
 
       &quot;margin&quot;: true,
-      &quot;margin-top&quot;: true,
-      &quot;margin-left&quot;: true,
-      &quot;margin-bottom&quot;: true,
-      &quot;margin-right&quot;: true,
+      &quot;marginTop&quot;: true,
+      &quot;marginLeft&quot;: true,
+      &quot;marginBottom&quot;: true,
+      &quot;marginRight&quot;: true,
 
       &quot;padding&quot;: true,
-      &quot;padding-top&quot;: true,
-      &quot;padding-left&quot;: true,
-      &quot;padding-bottom&quot;: true,
-      &quot;padding-right&quot;: true,
+      &quot;paddingTop&quot;: true,
+      &quot;paddingLeft&quot;: true,
+      &quot;paddingBottom&quot;: true,
+      &quot;paddingRight&quot;: true,
 
       &quot;top&quot;: true,
       &quot;left&quot;: true,
