--- a/api_docs/files/src_dom_css.js.html
+++ b/api_docs/files/src_dom_css.js.html
@@ -66,7 +66,7 @@
         <h2 class="no-toc">Files</h2>
     </div>
     <div class="bd">
-        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
+        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt\helpers.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
     </div>
 </div>
 
@@ -138,11 +138,8 @@
     }
 
     if (pixel[prop] === true) {
-      console.log(&quot;Changing &quot; + unit + &quot; to &quot; + unit + &quot;px&quot;);
       return unit + &quot;px&quot;;
     }
-
-    console.log(&quot;Conversion not possible&quot;);
 
     return unit;
   }
@@ -170,32 +167,33 @@
      * @since 0.1.0
      */
     css: function (prop, value) {
-      var _i;
+      var unhyphed;
 
       if (typeof prop === &quot;string&quot;) {
+        unhyphed = unhyph(prop);
+
         if (value) {
           return this.each(function (el) {
-            el.style[unhyph(prop)] = unitize(value, unhyph(prop));
+            el.style[unhyphed] = unitize(value, unhyphed);
           });
         } else {
           return this.first(function (el) {
-            return el.style[unhyph(prop)];
+            return el.style[unhyphed];
           });
         }
       } else if (typeof prop === &quot;object&quot;) {
-        for (_i in prop) {
-          if (own(prop, _i)) {
-            return this.each(function (el) {
-              el.style[unhyph(_i)] = unitize(prop[_i], unhyph(_i));
-            });
-          }
-        }
+        forIn(prop, function (pr) {
+          unhyphed = unhyph(pr);
+
+          this.each(function (el) {
+            el.style[unhyphed] = unitize(prop[pr], unhyphed);
+          });
+        }, this);
       }
     }
   });
 
   (function () {
-
     var cssObj = {}
       , impCss;
 
