--- a/api_docs/files/src_anim.js.html
+++ b/api_docs/files/src_anim.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>src\dom\main.js - hilo</title>
+    <title>src\anim.js - hilo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,9 +12,9 @@
 </head>
 <body>
 <div class="main-header">
-  <h1 class="site-logo"><a href="../index.html">hilo: src\dom\main.js</a></h1>
+  <h1 class="site-logo"><a href="../index.html">hilo: src\anim.js</a></h1>
   
-  <p>API Docs for: 0.1.0-pre-dev-beta-9</p>
+  <p>API Docs for: 0.1.0-pre-dev-beta-10</p>
 </div>
 <div class="doc">
   <div class="sidebar">
@@ -66,7 +66,7 @@
         <h2 class="no-toc">Files</h2>
     </div>
     <div class="bd">
-        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt\helpers.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
+        <ul><li>src\ajax.js/<ul></ul></li><li>src\anim.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt.js/<ul></ul></li><li>src\fx.js/<ul></ul></li><li>src\sizzle.js/<ul></ul></li><li>src\test.js/<ul></ul></li></ul>
     </div>
 </div>
 
@@ -74,61 +74,39 @@
 
   </div>
   <div class="main">
-    <div class="content"><h4>src\dom\main.js</h4>
+    <div class="content"><h4>src\anim.js</h4>
 
 <pre class="code prettyprint linenums">
   
   // --------------------------------------------------
-  // Hilo DOM
+  // Animation
   // --------------------------------------------------
 
   /**
-   * Main DOM Class
+   * Animate a set of CSS properties given
    * 
-   * @class Dom
    * @constructor
-   * @param {array} els The elements to manipulate
-   * @param {string} sel The selector used
-   * @return void
+   * @class Animation
+   * @private
+   * @param {Object} css An object containing CSS properties
+   * @param {Number} timing The timing
+   * @param {Function} onanimationstart fn to exec. when animation starts
+   * @param {Function} onanimationend fn to exec. when animation ends
    * @example
    * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
-   * new Dom (document.querySelectorAll(p:first-child);
-   * new Dom ([document.createElement(&quot;div&quot;)]);
-   * new Dom ([document.getElementByid(&quot;box&quot;)]);
-   * new Dom (document.getElementsByClassName(&quot;hidden&quot;));
-   * new Dom (document.getElementsByTagName(&quot;mark&quot;));
+   * new Animation ({opacity:0});
+   * new Animation ({width:100,height:100})
    * &lt;/pre&gt;&lt;/div&gt;
    * @since 0.1.0
    */
-  function Dom (els, sel) {
-    var _i, _l;
 
-    // Note that &#x60;this&#x60; is an object and&quot;
-    // NOT an Array
-
-    // Loop thorugh the NodeList and set
-    // this[index] for els[index]
-
-    for (_i = 0, _l = els.length; _i &lt; _l; _i += 1) {
-      this[_i] = els[_i];
+  function Animation (css, timing, onanimationstart, onanimationend) {
+    if (typeof css !== &quot;object&quot;) {
+      return;
     }
 
-    // Useful for looping through as ours
-    // is an object and not an array
-
-    this.length = els.length;
-
-    // Know what selector is used to select
-    // the elements
-
-    this.sel = sel;
+    
   }
-
-  Dom.prototype = Array.prototype;
-
-  extend(Dom.prototype, {
-    constructor: Dom
-  });
 </pre>
 
 </div>
