--- a/api_docs/files/src_core.js.html
+++ b/api_docs/files/src_core.js.html
@@ -14,7 +14,7 @@
 <div class="main-header">
   <h1 class="site-logo"><a href="../index.html">hilo: src\core.js</a></h1>
   
-  <p>API Docs for: 0.1.0-pre-dev-beta-9</p>
+  <p>API Docs for: 0.1.0-pre-dev-beta-10</p>
 </div>
 <div class="doc">
   <div class="sidebar">
@@ -66,7 +66,7 @@
         <h2 class="no-toc">Files</h2>
     </div>
     <div class="bd">
-        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt\helpers.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
+        <ul><li>src\ajax.js/<ul></ul></li><li>src\anim.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt.js/<ul></ul></li><li>src\fx.js/<ul></ul></li><li>src\sizzle.js/<ul></ul></li><li>src\test.js/<ul></ul></li></ul>
     </div>
 </div>
 
@@ -80,29 +80,11 @@
   
   // Core Library
 
-  // --------------------------------------------------
-  // select()
-  // --------------------------------------------------
-  // 
-  // Select elements
-  // 
-  // This function can be used throughout the code
-  // to select elements
-  // 
-  // Usage:
-  //
-  // select(selector, root)
-  //   selector - Selector {String}
-  //   root - Root element {String|HTMLElement}
-  //
-
-  select = feature.qsa3 ? function (selector, root) {
+  select = select || function (selector, root) {
     // Set root to given root or document
     root = root || doc;
 
     return root.querySelectorAll(selector);
-  } : function (selector, root) {
-    return sizzle(selector, root);
   };
 
   /**
@@ -158,6 +140,10 @@
   // ES Utils
   hilo.each = each;
   hilo.extend = extend;
+
+  // Legacy
+
+  hilo.legacy = typeof sizzle === &quot;function&quot;;
 </pre>
 
 </div>
