--- a/api_docs/files/src_evt.js.html
+++ b/api_docs/files/src_evt.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>src\evt\helpers.js - hilo</title>
+    <title>src\evt.js - hilo</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,9 +12,9 @@
 </head>
 <body>
 <div class="main-header">
-  <h1 class="site-logo"><a href="../index.html">hilo: src\evt\helpers.js</a></h1>
+  <h1 class="site-logo"><a href="../index.html">hilo: src\evt.js</a></h1>
   
-  <p>API Docs for: 0.1.0-pre-dev-beta-9</p>
+  <p>API Docs for: 0.1.0-pre-dev-beta-10</p>
 </div>
 <div class="doc">
   <div class="sidebar">
@@ -66,7 +66,7 @@
         <h2 class="no-toc">Files</h2>
     </div>
     <div class="bd">
-        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt\helpers.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
+        <ul><li>src\ajax.js/<ul></ul></li><li>src\anim.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt.js/<ul></ul></li><li>src\fx.js/<ul></ul></li><li>src\sizzle.js/<ul></ul></li><li>src\test.js/<ul></ul></li></ul>
     </div>
 </div>
 
@@ -74,7 +74,7 @@
 
   </div>
   <div class="main">
-    <div class="content"><h4>src\evt\helpers.js</h4>
+    <div class="content"><h4>src\evt.js</h4>
 
 <pre class="code prettyprint linenums">
 
@@ -199,6 +199,199 @@
       }
     }())
   });
+    
+  // --------------------------------------------------
+  // Events (imp.)
+  // --------------------------------------------------
+
+  extend(Dom.prototype, {
+    ready: function (fn) {
+      this.each(function (el) {
+        el.onreadystatechange = function () {
+          if (el.readyState = &quot;complete&quot;) {
+            fn();
+          }
+        };
+      });
+    }
+  });
+
+  (function () {
+    var evtObj = {}
+      , impEvts;
+
+    impEvts = [
+      &quot;blur&quot;,
+      &quot;click&quot;,
+      &quot;change&quot;,
+      &quot;dblclick&quot;,
+      &quot;drag&quot;,
+      &quot;dragstart&quot;,
+      &quot;dragend&quot;,
+      &quot;dragenter&quot;,
+      &quot;dragleave&quot;,
+      &quot;dragover&quot;,
+      &quot;drop&quot;,
+      &quot;error&quot;,
+      &quot;focus&quot;,
+      &quot;keyup&quot;,
+      &quot;keydown&quot;,
+      &quot;keypress&quot;,
+      &quot;load&quot;,
+      &quot;mousedown&quot;,
+      &quot;mouseleave&quot;,
+      &quot;mouseenter&quot;,
+      &quot;mouseover&quot;,
+      &quot;mousemove&quot;,
+      &quot;mouseout&quot;,
+      &quot;submit&quot;
+    ];
+
+    for (_i = 0; _i &lt; impEvts.length; _i += 1) {
+      evtObj[impEvts[_i]] = function (fn) {
+        if (typeof fn === &quot;function&quot;) {
+          return this.on(impEvts[_i], fn);
+        }
+
+        return this.fire(impEvts[_i]);
+      };
+    }
+
+    extend(Dom.prototype, evtObj);
+  }());
+    
+  // These keyborad key mappings will be later used
+  // to enable use of shortcut keys or the like
+
+  key = {
+
+    // Numbers
+
+    &quot;0&quot;: 48,
+    &quot;1&quot;: 49,
+    &quot;2&quot;: 50,
+    &quot;3&quot;: 51,
+    &quot;4&quot;: 52,
+    &quot;5&quot;: 53,
+    &quot;6&quot;: 54,
+    &quot;7&quot;: 55,
+    &quot;8&quot;: 56,
+    &quot;9&quot;: 57,
+
+    // Uppercase letters
+
+    A: 65,
+    B: 66,
+    C: 67,
+    D: 68,
+    E: 69,
+    F: 70,
+    G: 71,
+    H: 72,
+    I: 73,
+    J: 74,
+    K: 75,
+    L: 76,
+    M: 77,
+    N: 78,
+    O: 79,
+    P: 80,
+    Q: 81,
+    R: 82,
+    S: 83,
+    T: 84,
+    U: 85,
+    V: 86,
+    W: 87,
+    X: 88,
+    Y: 89,
+    Z: 90,
+
+    // Lowecase letters
+
+    a: 97,
+    b: 98,
+    c: 99,
+    d: 100,
+    e: 101,
+    f: 102,
+    g: 103,
+    h: 104,
+    i: 105,
+    j: 106,
+    k: 107,
+    l: 108,
+    m: 109,
+    n: 110,
+    o: 111,
+    p: 112,
+    q: 113,
+    r: 114,
+    s: 115,
+    t: 116,
+    u: 117,
+    v: 118,
+    w: 119,
+    x: 120,
+    y: 121,
+    z: 122,
+
+    // Other Important Keys
+
+    alt: 18,
+    caps: 20,
+    ctrl: 17,
+    cmd: 17,
+    enter: 13,
+    esc: 27,
+    del: 46,
+    end: 35,
+    back: 8,
+
+    // Arrows
+
+    left: 37,
+    up: 38,
+    right: 39,
+    down: 40,
+
+    // F-keys
+
+    f1: 112,
+    f2: 113,
+    f3: 114,
+    f4: 115,
+    f5: 116,
+    f6: 117,
+    f7: 118,
+    f8: 119,
+    f9: 120,
+    f10: 121,
+    f11: 122,
+    f12: 123,
+
+    // Less-used keys
+
+    home: 36,
+    insert: 45,
+    numlock: 144,
+
+    // Symbols
+
+    &quot;&#x60;&quot;: 222,
+    &quot;-&quot;: 189,
+    &quot;,&quot;: 188,
+    &quot;.&quot;: 190,
+    &quot;/&quot;: 191,
+    &quot;;&quot;: 186,
+    &quot;[&quot;: 219,
+    &quot;\\&quot;: 220,
+    &quot;]&quot;: 221,
+    &quot;=&quot;: 187
+
+  };
+
+  hilo.keys = key;
 </pre>
 
 </div>
