--- a/api_docs/modules/Hilo.html
+++ b/api_docs/modules/Hilo.html
@@ -14,7 +14,7 @@
 <div class="main-header">
   <h1 class="site-logo"><a href="../index.html">hilo: Hilo</a></h1>
   
-  <p>API Docs for: 0.1.0-pre-dev-beta-9</p>
+  <p>API Docs for: 0.1.0-pre-dev-beta-10</p>
 </div>
 <div class="doc">
   <div class="sidebar">
@@ -66,7 +66,7 @@
         <h2 class="no-toc">Files</h2>
     </div>
     <div class="bd">
-        <ul><li>src\ajax\main.js/<ul></ul></li><li>src\ajax\more.js/<ul></ul></li><li>src\anim\main.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom\class-id.js/<ul></ul></li><li>src\dom\css.js/<ul></ul></li><li>src\dom\els.js/<ul></ul></li><li>src\dom\helpers.js/<ul></ul></li><li>src\dom\main.js/<ul></ul></li><li>src\dom\manp.js/<ul></ul></li><li>src\dom\misc.js/<ul></ul></li><li>src\dom\sizzle.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt\helpers.js/<ul></ul></li><li>src\fx\simple.js/<ul></ul></li><li>src\test\comp.js/<ul></ul></li><li>src\test\main.js/<ul></ul></li></ul>
+        <ul><li>src\ajax.js/<ul></ul></li><li>src\anim.js/<ul></ul></li><li>src\core.js/<ul></ul></li><li>src\dom.js/<ul></ul></li><li>src\end.js/<ul></ul></li><li>src\evt.js/<ul></ul></li><li>src\fx.js/<ul></ul></li><li>src\sizzle.js/<ul></ul></li><li>src\test.js/<ul></ul></li></ul>
     </div>
 </div>
 
@@ -100,7 +100,7 @@
     </div>
 </div>
 <br><br>
-<span class="foundat">Module description found: <a href="../../files/src_test_main.js.html#l31"><code>src\test\main.js:31</code></a></span>
+<span class="foundat">Module description found: <a href="../../files/src_test.js.html#l31"><code>src\test.js:31</code></a></span>
 </div>
   </div>
 </div>
