--- a/test/dom.html
+++ b/test/dom.html
@@ -15,10 +15,10 @@
   <!-- include source files here... -->
   
   <!--[if lt IE 9]>
-    <script type="text/javascript" src="../build/hilo-legacy-dev.js"></script>
+    <script type="text/javascript" src="../build/hilo-legacy.js"></script>
   <![endif]-->
   <!--[if gt IE 8]><!-->
-    <script type="text/javascript" src="../build/hilo-dev.js"></script>
+    <script type="text/javascript" src="../build/hilo.js"></script>
   <!--<![endif]-->
 
   <!-- include spec files here... -->
