--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#features" class="nav-item">Features</a>
         <a href="#usage" class="nav-item">Usage</a>
         <a href="#about" class="nav-item">About</a>
-        <a href="http://github.com/erikroyall/hilo" target="_blank" class="nav-item"><li>Source Code</li></a>
+        <a href="http://github.com/erikroyall/hilo" target="_blank" class="nav-item">Source Code</a>
       </div>
     </nav>
     <header class="main-header">
