Commented X-UA-Compatible meta

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <!-- X-UA-Compatible is not yet a standard -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> -->
     <title>Hilo</title>
     <meta name="description" content="A lightning fast Open Source JavaScript Framework and library that makes developing awesome websites easy"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -37,7 +38,7 @@
     	<p class="version">v0.1.0-pre-dev-beta-8</p>
     </header>
     <div role="main" class="main">
-    	<section name="features" class="features">
+    	<section id="features" class="features">
         <h2 class="section-heading">Features</h2>
     		<div id="f-dom" class="feature">
     			<h3>DOM</h3>
