--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xml:lang="en" lang="en" class="no-js">
   <head>
-    <meta charset="utf-8"/>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <!-- X-UA-Compatible is not yet a standard -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> -->
-    
+
     <title>Hilo</title>
 
     <meta name="description" content="A lightning fast Open Source JavaScript Framework and library that makes developing awesome websites easy"/>
