--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html xml:lang="en" lang="en" class="no-js">
   <head>
-    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <meta charset="utf-8"/>
     <!-- X-UA-Compatible is not yet a standard -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> -->
 
