--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <!-- X-UA-Compatible is not yet a standard -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> -->
 
-    <title>Hilo</title>
+    <title>Hilo.js JavaScript Library</title>
 
     <meta name="description" content="A lightning fast Open Source JavaScript Framework and library that makes developing awesome websites easy"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="application-name" content="Hilo"/>
     <meta name="author" content="Erik Royall"/>
-    <meta name="keywords" content="hilo,hilo.js,JavaScript,JavaScript Library, JavaScript Framework"/>
+    <meta name="keywords" content="hilo,hilo.js,JavaScript,JavaScript Library,JavaScript Framework"/>
 
     <link rel="stylesheet" href="styles/styles.css"/>
   </head>
