--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xml:lang="en" lang="en" class="no-js">
+<html xml:lang="en" lang="en">
   <head>
     <meta charset="utf-8"/>
     <!-- X-UA-Compatible is not yet a standard -->
@@ -13,20 +13,21 @@
     <meta name="author" content="Erik Royall"/>
     <meta name="keywords" content="hilo,hilo.js,JavaScript,JavaScript Library,JavaScript Framework"/>
 
+
     <link rel="stylesheet" href="styles/styles.css"/>
   </head>
-  <body>
+  <body class="no-js">
   	<!--[if lt IE 9]>
       <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   	<![endif]-->
 
     <div class="site-nav">
       <div class="nav-ul">
-        <a href="#top" class="nav-item">Home</a>
-        <a href="#features" class="nav-item">Features</a>
-        <a href="#usage" class="nav-item">Usage</a>
-        <a href="#about" class="nav-item">About</a>
-        <a href="http://github.com/erikroyall/hilo" target="_blank" class="nav-item">Source Code</a>
+        <a href="#top" accesskey="h" tabindex="1" class="nav-item">Home</a>
+        <a href="#features" accesskey="f" tabindex="2" class="nav-item">Features</a>
+        <a href="#usage" accesskey="u" tabindex="3" class="nav-item">Usage</a>
+        <a href="#about" accesskey="a" tabindex="4" class="nav-item">About</a>
+        <a href="http://github.com/erikroyall/hilo" rel="nofollow" accesskey="s" tabindex="5" target="_blank" class="nav-item">Source Code</a>
       </div>
     </div>
     <div class="main-header">
@@ -88,7 +89,7 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
       </div>
       <div class="about">
         <h2>About Hilo</h2>
-        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" target="_blank">Erik Royall</a>, a 14 year old Web Developer.</p>
+        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" rel="nofollow" target="_blank" tabindex="6">Erik Royall</a>, a 14 year old Web Developer.</p>
       </div>
     </div>
     <div class="main-footer cf">
