--- a/api_docs/files/src_anim.js.html
+++ b/api_docs/files/src_anim.js.html
@@ -97,6 +97,8 @@
    * @example
    * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Animation ({opacity:0});
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Animation ({width:100,height:100})
    * &lt;/pre&gt;&lt;/div&gt;
    * @since 0.1.0
