--- a/api_docs/files/src_dom.js.html
+++ b/api_docs/files/src_dom.js.html
@@ -95,10 +95,20 @@
    * @example
    * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Dom (document.querySelectorAll(p:first-child);
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Dom ([document.createElement(&quot;div&quot;)]);
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Dom ([document.getElementByid(&quot;box&quot;)]);
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Dom (document.getElementsByClassName(&quot;hidden&quot;));
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new Dom (document.getElementsByTagName(&quot;mark&quot;));
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * &lt;/pre&gt;&lt;/div&gt;
    * @since 0.1.0
    */
