--- a/api_docs/files/src_test.js.html
+++ b/api_docs/files/src_test.js.html
@@ -96,6 +96,9 @@
      * @example
      * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
      * $.test(&quot;hello&quot;);
+     * &lt;/pre&gt;&lt;/div&gt;
+     * 
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
      * $.test({
      *   name: &quot;Erik Royall&quot;,
      *   age: 14,
