--- a/api_docs/classes/Animation.html
+++ b/api_docs/classes/Animation.html
@@ -143,6 +143,9 @@
         <h5>Example</h5>
         <div class="code"><pre class="prettyprint">
 new Animation ({opacity:0});
+</pre></div>
+
+<div class="code"><pre class="prettyprint">
 new Animation ({width:100,height:100})
 </pre></div>
     
