--- a/api_docs/files/src_more.js.html
+++ b/api_docs/files/src_more.js.html
@@ -148,6 +148,15 @@
 
     sign: function (value) {
       sign.call(this, this.num, value);
+    },
+
+    times: function (fn, args) {
+      var _i = 0;
+
+      while (_i &lt; this.num) {
+        fn.apply(this, args);
+        _i += 1;
+      }
     }
   });
 </pre>
