--- a/api_docs/files/src_more.js.html
+++ b/api_docs/files/src_more.js.html
@@ -93,6 +93,8 @@
    * @example
    * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new NumberObject(2);
+   * &lt;/pre&gt;&lt;/div&gt;
+   * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
    * new NumberObject(Math.PI);
    * &lt;/pre&gt;&lt;/div&gt;
    * @since 0.1.0
@@ -102,21 +104,90 @@
   }
 
   extend(NumberObject.prototype, {
+    
+    /**
+     * NumberObject.MAX_INTEGER = 9007199254740991
+     * The maximum value of a JavaScript integer
+     * 
+     * @for NumberObject
+     * @property MAX_INTEGER
+     * @type Number
+     * @since 0.1.0
+     */
     MAX_INTEGER: 9007199254740991,
+
+    /**
+     * Epsilon
+     * 
+     * @for NumberObject
+     * @property EPSILON
+     * @type Number
+     * @since 0.1.0
+     */
     EPSILON: 2.220446049250313e-16,
 
+    /**
+     * Parses integer value from a string or number
+     * 
+     * @for NumberObject
+     * @method parseInt
+     * @return {Number}
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(3.5).parseInt() // 3
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     parseInt: function () {
       parseInt.call(this, this.num);
     },
 
+    /**
+     * Parses float point number value from a string or number
+     * 
+     * @for NumberObject
+     * @method parseFloat
+     * @return {Number}
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(&quot;5.3&quot;).parseFloat() // 5.3
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     parseFloat: function () {
       parseFloat.call(this, this.num);
     },
 
+    /**
+     * Returns true if a number is a finite value
+     * 
+     * @for NumberObject
+     * @method isFinite
+     * @return {Bolean} Whether the number is finite
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(NaN).isFinite() // false
+     * new NumberObject(3).isFinite() // true
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     isFinite: function() {
       return typeof this.num === &#x27;number&#x27; &amp;&amp; isFinite(this.num);
     },
 
+    /**
+     * If the number is an integer
+     * 
+     * @for NumberObject
+     * @method isInteger
+     * @return {Number} Whether the number is an integer
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(5.3).isInteger() // false
+     * new NumberObject(4).isInteger() // true
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     isInteger: function() {
       return typeof this.num === &#x27;number&#x27; &amp;&amp;
         !isNaN(this.num) &amp;&amp;
@@ -124,6 +195,19 @@
         parseInt(this.num, 10) === this.num;
     },
 
+    /**
+     * Returns if the number is NaN (Not a number)
+     * 
+     * @for NumberObject
+     * @method isNan
+     * @return {Number} Whether the number is not a number (NaN)
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(5).isNan() // false
+     * new NumberObject(NaN).isNan() // true
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     isNaN: function() {
       // NaN !== NaN, but they are identical.
       // NaNs are the only non-reflexive value, i.e., if x !== x,
@@ -133,6 +217,19 @@
       return this.num !== this.num;
     },
 
+    /**
+     * Converts ant value to an integer
+     * 
+     * @for NumberObject
+     * @method toInteger
+     * @return {Number} The converted integer
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(5).toInteger() // 5
+     * new NumberObject(NaN).toInteger() // 0
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     toInteger: function() {
       var number = +this.num;
       if (isNaN(number)) {
@@ -143,13 +240,35 @@
         return number;
       }
       
-      return Math.sign(number) * Math.floor(Math.abs(number));
+      return sign.call(this, number) * Math.floor(Math.abs(number));
     },
 
     sign: function (value) {
       sign.call(this, this.num, value);
     },
 
+    /**
+     * Call a function n times
+     * 
+     * @for NumberObject
+     * @method times
+     * @param {Function} fn The function to be called
+     * @param {Array} args The arguments to be passed
+     * @return {Number} The converted integer
+     * @example
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * var i = 0;
+     * new NumberObject(100).times(function () {
+     *   console.log(i++);
+     * });
+     * &lt;/pre&gt;&lt;/div&gt;
+     * &lt;div class=&quot;code&quot;&gt;&lt;pre class=&quot;prettyprint&quot;&gt;
+     * new NumberObject(100).times(function () {
+     *   consolee.log
+     * });
+     * &lt;/pre&gt;&lt;/div&gt;
+     * @since 0.1.0
+     */
     times: function (fn, args) {
       var _i = 0;
 
