Reduce HTTP Requests

--- a/index.html
+++ b/index.html
@@ -97,9 +97,6 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
     </div>
 
     <!-- Load the JavaScript scripts after the page has finished rendering -->
-    <script src="scripts/prettify.js"></script>
-    <script src="scripts/run_prettify.js"></script>
-    <script src="scripts/hilo-dev.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/script.min.js"></script>
   </body>
 </html>
