--- a/index.html
+++ b/index.html
@@ -98,5 +98,8 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
 
     <!-- Load the JavaScript scripts after the page has finished rendering -->
     <script src="scripts/script.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <!-- Include the RenderedFont rendering engine (using the #free account key) -->
+    <script type="text/javascript"  src='http://cdn.renderedfont.com/js/renderedfont-0.8.min.js#free'></script>
   </body>
 </html>
