Set EXPIRES header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="application-name" content="Hilo"/>
     <meta name="author" content="Erik Royall"/>
+    <meta http-equiv="EXPIRES" CONTENT="Tue, 01 Oct 2013 17:28:56 GMT">
     <meta name="keywords" content="hilo,hilo.js,JavaScript,JavaScript Library,JavaScript Framework"/>
 
 
