Fix charset and #about

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xml:lang="en" lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <!-- X-UA-Compatible is not yet a standard -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> -->
 
@@ -88,7 +88,7 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
   });
 &lt;/script&gt;</pre></div>
       </div>
-      <div class="about">
+      <div class="about" id="about">
         <h2>About Hilo</h2>
         <p>Hilo is developed by me, <a href="http://erikroyall.github.com" rel="nofollow" target="_blank" tabindex="6">Erik Royall</a>, a 14 year old Web Developer.</p>
       </div>
