--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
       <div class="greatness">
         <h3>Big'ol list of greatness:</h3>
         <ol>
-          <li>Browser Support: IE 7+, FF 4+, Chrome 1+, Safari 5+, Opera 10+</li>
-          <li>Made by a 14 year-old (Amazing, isn't it?)</li>
+          <li>Browser Support: IE 7+, FF 4+, Chrome 1+, Safari 5+, Opera 10.5+</li>
           <li>Fastest Selector Engine (Sizzle only as a fallback to legacy browsers)</li>
           <li>Feature, Browser, Platform, Rendering Engine detection</li>
           <li>Small: 129KB uncompressed; 39KB compressed and gzipped</li>
         </ol>
+        <p>There are 2 different builds of Hilo for every version:</p>
+        <ol>
+          <li>The 'Legacy' Build, which is intended for those who'd like to support IE9- and several old browsers.</li>
+          <li>The 'Normal' Build, which is for those who doesn't want to support the legacy browsers.</li>
+        </ol>
+        <p>The legacy build is (currently) 176 KB uncompressed and 46 KB (UglifyJS compression), while the normal build is 108 KB uncompressed and 28 KB uglified.</p>
       </div>
       <div class="usage">
         <h3>Using Hilo</h3>
@@ -88,7 +93,7 @@ Create another <span class="code">&lt;script&gt;</span> and write Hilo code ther
       </div>
       <div class="about" id="about">
         <h2>About Hilo</h2>
-        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" rel="nofollow" target="_blank" tabindex="6">Erik Royall</a>, a 14 year old Web Developer.</p>
+        <p>Hilo is developed by me, <a href="http://erikroyall.github.com" rel="nofollow" target="_blank" tabindex="6">Erik Royall</a>, a JavaScript programmer and a Web Developer.</p>
       </div>
     </div>
     <div class="main-footer cf">
