--- a/api_docs/files/src_fx.js.html
+++ b/api_docs/files/src_fx.js.html
@@ -201,7 +201,7 @@
     },
 
     /**
-     * Appears a disappeared element, disappears and appeared element
+     * Appears a disappeared element, disappears an appeared element
      * 
      * @for Dom
      * @method toggleVisibility
